--- a/index.css
+++ b/index.css
@@ -299,29 +299,30 @@ table button:hover {
 }
 
 .attention-title {
+    width: 10%;
     position: absolute;
     margin-top: 25%;
     margin-left: 44%;
-    font-size: 220%;
+    font-size: 2.3vw;
     font-family: gilroy;
 }
 
-.attention-text {
+.attention-text {    
     position: absolute;
+    width: 45%;
     margin-top: 29%;
-    margin-left: 26.5%;
-    font-size: 140%;
+    margin-left: 27%;
+    font-size: 1.4vw;
     font-family: gilroy;
     text-align-last: center;
 }
 
-.visit-website-button {
+.visit-website-button {    
     border-radius: 3em;
     background-color: #fd2371;
-    color: white;
-    border: none;
+    color: white;    
     font-weight: 900;
-    font-size: 110%;
+    font-size: 1.1vw;
     width: 30%;
     height: 6%;
     margin-top: 35%;
@@ -385,10 +386,9 @@ table button:hover {
 .go-back-button {
     background-color: #ffbd59;
     border-radius: 3em;
-    color: white;
-    border: none;
+    color: white;    
     font-weight: 900;
-    font-size: 110%;
+    font-size: 1.1vw;
     width: 25%;
     height: 6%;
     position: absolute;
